--- a/templates/config-wb-mr3.json.jinja
+++ b/templates/config-wb-mr3.json.jinja
@@ -1,12 +1,21 @@
+{% set title_en = title_en | default("WB-MR3LV/x, WB-MR3HV/x, WB-MRWL3  (3-channel relay)") -%}
+{% set title_ru = title_ru | default("WB-MR3LV/x, WB-MR3HV/x, WB-MRWL3  (3-канальный модуль реле)") -%}
+{% set device_type = device_type | default("WB-MR3") -%}
+{% set group = group | default("g-wb") -%}
+{% set device_name = device_name | default("WB-MR3") -%}
+{% set device_id = device_id | default("wb-mr3") -%}
+{% set has_signature = has_signature | default(false) -%}
+
 {% set OUTPUTS_NUMBER = 3 -%}
 {% set CURTAINS_NUMBER = OUTPUTS_NUMBER // 2 -%}
 {% set MMATRIX_OUTPUTS_NUMBER = 8 -%}
 {% set CURTAINS_MMATRIX_OUTPUTS_NUMBER = MMATRIX_OUTPUTS_NUMBER // 2 -%}
 {% set FIRST_INPUT = 0 -%}
 {
-    "title": "WB-MR3_template_title",
-    "device_type": "WB-MR3",
-    "group": "g-wb",
+    "title": "template_title",
+    "device_type": "{{ device_type }}",
+    "group": "{{ group }}",
+{% if has_signature %}
     "hw": [
         {
             "signature": "WBMR3"
@@ -15,9 +24,10 @@
             "signature": "MRWL3"
         }
     ],
+{% endif %}
     "device": {
-        "name": "WB-MR3",
-        "id": "wb-mr3",
+        "name": "{{ device_name }}",
+        "id": "{{ device_id }}",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
         "frame_timeout_ms": 8,
@@ -778,7 +788,7 @@
 
         "translations": {
             "en": {
-                "WB-MR3_template_title": "WB-MR3LV/x, WB-MR3HV/x, WB-MRWL3  (3-channel relay)",
+                "template_title": "{{ title_en }}",
                 "mode_description": "For using button mapping-matrix firmware v1.17.0 or newer is required",
                 "outputs_state_after_power_on_description": "Option \"According to inputs\" works for latching switch mode only, firmware v1.18.4 or newer is required",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
@@ -803,7 +813,7 @@
                 "curtains_control_description": "For using curtain mode firmware v1.21.0 or newer is required. For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
             },
             "ru": {
-                "WB-MR3_template_title": "WB-MR3LV/x, WB-MR3HV/x, WB-MRWL3  (3-канальный модуль реле)",
+                "template_title": "{{ title_ru }}",
 
                 {% for in_num in range(FIRST_INPUT, OUTPUTS_NUMBER + 1) -%}
                 "Input {{in_num}}": "Вход {{in_num}}",
