--- a/templates/config-wb-mr6cu.json.jinja
+++ b/templates/config-wb-mr6cu.json.jinja
@@ -1,9 +1,18 @@
+{% set title_en = title_en | default("WB-MR6CU v.2, WB-MRPS6 (6-channel relay)") -%}
+{% set title_ru = title_ru | default("WB-MR6CU v.2, WB-MRPS6 (6-канальный модуль реле)") -%}
+{% set device_type = device_type | default("WB-MR6CU") -%}
+{% set group = group | default("g-wb") -%}
+{% set device_name = device_name | default("WB-MR6CU") -%}
+{% set device_id = device_id | default("wb-mr6cu") -%}
+{% set has_signature = has_signature | default(false) -%}
+
 {% set OUTPUTS_NUMBER = 6 -%}
 {% set CURTAINS_NUMBER = OUTPUTS_NUMBER // 2 -%}
 {
-    "title": "WB-MR6CU_template_title",
-    "device_type": "WB-MR6CU",
-    "group": "g-wb",
+    "title": "template_title",
+    "device_type": "{{ device_type }}",
+    "group": "{{ group }}",
+{% if has_signature %}
     "hw": [
         {
             "signature": "MR6CU"
@@ -12,9 +21,10 @@
             "signature": "MRPS6"
         }
     ],
+{% endif %}
     "device": {
-        "name": "WB-MR6CU",
-        "id": "wb-mr6cu",
+        "name": "{{ device_name }}",
+        "id": "{{ device_id }}",
         "max_read_registers": 0,
         "response_timeout_ms": 1,
         "frame_timeout_ms": 8,
@@ -352,7 +362,7 @@
         ],
         "translations": {
             "en": {
-                "WB-MR6CU_template_title": "WB-MR6CU v.2, WB-MRPS6 (6-channel relay)",
+                "template_title": "{{ title_en }}",
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value.",
                 "Uptime": "Uptime (s)",
 
@@ -361,7 +371,7 @@
                 "curtains_control_description": "For using curtain mode firmware v1.21.0 or newer is required. For setup buttons actions select \"Operate according to button mapping-matrix\" mode and configure actions for buttons"
             },
             "ru": {
-                "WB-MR6CU_template_title": "WB-MR6CU v.2, WB-MRPS6 (6-канальный модуль реле)",
+                "template_title": "{{ title_ru }}",
                 "Outputs": "Выходы",
                 "Safety Mode": "Безопасный режим",
                 "General": "Общее",
