--- a/templates/config-oni-plc-w-emd-0008r.json.jinja
+++ b/templates/config-oni-plc-w-emd-0008r.json.jinja
@@ -1,4 +1,5 @@
-{% with device_type = "tpl1_oni_plc_w_emd_0008r",
+{% with device_title = "PLC-W-EMD-0008R",
+        device_type = "tpl1_oni_plc_w_emd_0008r",
         group = "g-oni",
         device_name = "PLC-W-EMD-0008R",
         device_id = "oni-plc-w-emd-0008r" %}
