--- a/templates/config-oni-plc-w-emd-0004r.json.jinja
+++ b/templates/config-oni-plc-w-emd-0004r.json.jinja
@@ -1,4 +1,5 @@
-{% with device_type = "tpl1_oni_plc_w_emd_0004r",
+{% with device_title = "PLC-W-EMD-0004R",
+        device_type = "tpl1_oni_plc_w_emd_0004r",
         group = "g-oni",
         device_name = "PLC-W-EMD-0004R",
         device_id = "oni-plc-w-emd-0004r" %}
