--- a/templates/config-oni-plc-w-emd-0008.json.jinja
+++ b/templates/config-oni-plc-w-emd-0008.json.jinja
@@ -1,4 +1,5 @@
-{% with device_type = "tpl1_oni_plc_w_emd_0008",
+{% with device_title = "PLC-W-EMD-0008",
+        device_type = "tpl1_oni_plc_w_emd_0008",
         group = "g-oni",
         device_name = "PLC-W-EMD-0008",
         device_id = "oni-plc-w-emd-0008" %}
