--- a/templates/config-wbio-do-r10a-8.json.jinja
+++ b/templates/config-wbio-do-r10a-8.json.jinja
@@ -1,9 +1,16 @@
+{% set device_title = device_title | default("WBIO-DO-R10A-8") -%}
+{% set device_type = device_type | default("WBIO-DO-R10A-8") -%}
+{% set group = group | default("g-wb") -%}
+{% set device_name = device_name | default("WBIO-DO-R10A-8") -%}
+{% set device_id = device_id | default("wb-mio-gpio") -%}
+
 {
-    "device_type": "WBIO-DO-R10A-8",
-    "group": "g-wb",
+    "title": "{{ device_title }}",
+    "device_type": "{{ device_type }}",
+    "group": "{{ group }}",
     "device": {
-        "name": "WBIO-DO-R10A-8",
-        "id": "wb-mio-gpio",
+        "name": "{{ device_name }}",
+        "id": "{{ device_id }}",
         "protocol": "modbus_io",
         "stride": 1000,
         "shift": 500,
