--- a/templates/config-wbio-do-r10r-4.json.jinja
+++ b/templates/config-wbio-do-r10r-4.json.jinja
@@ -1,9 +1,16 @@
+{% set device_title = device_title | default("WBIO-DO-R10R-4") -%}
+{% set device_type = device_type | default("WBIO-DO-R10R-4") -%}
+{% set group = group | default("g-wb") -%}
+{% set device_name = device_name | default("WBIO-DO-R10R-4") -%}
+{% set device_id = device_id | default("wb-mio-gpio") -%}
+
 {
-    "device_type": "WBIO-DO-R1G-16",
-    "group": "g-wb",
+    "title": "{{ device_title }}",
+    "device_type": "{{ device_type }}",
+    "group": "{{ group }}",
     "device": {
-        "name": "WBIO-DO-R1G-16",
-        "id": "wb-mio-gpio",
+        "name": "{{ device_name }}",
+        "id": "{{ device_id }}",
         "protocol": "modbus_io",
         "stride": 1000,
         "shift": 500,
@@ -49,99 +56,51 @@
         ],
         "channels": [
             {
-                "name": "K1",
+                "name": "DIR1",
                 "reg_type": "coil",
                 "address": 0,
                 "type": "switch"
             },
             {
-                "name": "K2",
+                "name": "ON1",
                 "reg_type": "coil",
                 "address": 1,
                 "type": "switch"
             },
             {
-                "name": "K3",
+                "name": "DIR2",
                 "reg_type": "coil",
                 "address": 2,
                 "type": "switch"
             },
             {
-                "name": "K4",
+                "name": "ON2",
                 "reg_type": "coil",
                 "address": 3,
                 "type": "switch"
             },
             {
-                "name": "K5",
+                "name": "DIR3",
                 "reg_type": "coil",
                 "address": 4,
                 "type": "switch"
             },
             {
-                "name": "K6",
+                "name": "ON3",
                 "reg_type": "coil",
                 "address": 5,
                 "type": "switch"
             },
             {
-                "name": "K7",
+                "name": "DIR4",
                 "reg_type": "coil",
                 "address": 6,
                 "type": "switch"
             },
             {
-                "name": "K8",
+                "name": "ON4",
                 "reg_type": "coil",
                 "address": 7,
-                "type": "switch"
-            },
-            {
-                "name": "K9",
-                "reg_type": "coil",
-                "address": 8,
-                "type": "switch"
-            },
-            {
-                "name": "K10",
-                "reg_type": "coil",
-                "address": 9,
-                "type": "switch"
-            },
-            {
-                "name": "K11",
-                "reg_type": "coil",
-                "address": 10,
-                "type": "switch"
-            },
-            {
-                "name": "K12",
-                "reg_type": "coil",
-                "address": 11,
-                "type": "switch"
-            },
-            {
-                "name": "K13",
-                "reg_type": "coil",
-                "address": 12,
-                "type": "switch"
-            },
-            {
-                "name": "K14",
-                "reg_type": "coil",
-                "address": 13,
-                "type": "switch"
-            },
-            {
-                "name": "K15",
-                "reg_type": "coil",
-                "address": 14,
-                "type": "switch"
-            },
-            {
-                "name": "K16",
-                "reg_type": "coil",
-                "address": 15,
                 "type": "switch"
             }
         ]
