WB-MDM3, WB-MAO4 templates: fix swapped increase/decrease actions for all channels

--- a/templates/config-wb-mao4.json.jinja
+++ b/templates/config-wb-mao4.json.jinja
@@ -381,8 +381,8 @@
                 "enum_titles": [
                     "Turn Off",
                     "Turn On",
-                    "Increase level",
-                    "Decrease level"
+                    "Decrease level",
+                    "Increase level"
                 ],
                 "default": 0,
                 "group": "input_{{ch_number + 1}}_{{press_type | replace(' ', '_') }}_press_action",
