--- a/templates/config-map12e-fw2.json.jinja
+++ b/templates/config-map12e-fw2.json.jinja
@@ -349,7 +349,7 @@
                 "address": "0x{{"%x"|format(5380 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_l1"
@@ -360,7 +360,7 @@
                 "address": "0x{{"%x"|format(5396 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_l1"
@@ -482,7 +482,7 @@
             {
                 "name": "Ch {{ch_num}} RN energy L2",
                 "reg_type": "input",
-                "address": "0x{{"%x"|format(5386 + (ch_num - 1) * 4096)}}",
+                "address": "0x{{"%x"|format(4664 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
                 "scale": 1e-5,
@@ -496,7 +496,7 @@
                 "address": "0x{{"%x"|format(5384 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_l2"
@@ -507,7 +507,7 @@
                 "address": "0x{{"%x"|format(5400 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_l2"
@@ -643,7 +643,7 @@
                 "address": "0x{{"%x"|format(5388 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_l3"
@@ -654,7 +654,7 @@
                 "address": "0x{{"%x"|format(5404 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_l3"
@@ -769,7 +769,7 @@
                 "address": "0x{{"%x"|format(5376 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_total"
@@ -780,7 +780,7 @@
                 "address": "0x{{"%x"|format(5392 + (ch_num - 1) * 4096)}}",
                 "type": "value",
                 "format": "u64",
-                "scale": 1e-5,
+                "scale": 1.422222e-9,
                 "round_to": 1e-6,
                 "word_order": "little_endian",
                 "group": "channel{{ch_num}}_total"
