--- a/templates/config-wb-ups-v3.json.jinja
+++ b/templates/config-wb-ups-v3.json.jinja
@@ -24,6 +24,31 @@
 
         "groups": [
             {
+                "title": "Uninterruptible Power Supply",
+                "id": "g_ups"
+            },
+            {
+                "title": "Output Voltage Control",
+                "description": "g_output_voltage_control_description",
+                "id": "gg_output_voltage_control",
+                "group": "g_ups"
+            },
+            {
+                "title": "UPS Channels",
+                "id": "gg_ups_channels",
+                "group": "g_ups",
+                "ui_options": {
+                    "wb": {
+                        "disable_title": true
+                    }
+                }
+            },
+            {
+                "title": "Button",
+                "description": "g_button_description",
+                "id": "g_button"
+            },
+            {
                 "title": "General",
                 "id": "general"
             },
@@ -37,6 +62,33 @@
             }
         ],
         "parameters": [
+            {
+                "id": "output_voltage_control_mode",
+                "title": "Mode",
+                "address": 1000,
+                "reg_type": "holding",
+                "enum": [0, 1],
+                "default": 0,
+                "enum_titles": [
+                    "Automatic",
+                    "Manual"
+                ],
+                "group": "gg_output_voltage_control",
+                "order": 1
+            },
+            {
+                "id": "output_voltage_setpoint",
+                "title": "Output Voltage (V)",
+                "address": 1000,
+                "reg_type": "holding",
+                "min": 10.0,
+                "max": 25.6,
+                "default": 12.0,
+                "scale": 0.001,
+                "order": 2,
+                "condition": "output_voltage_control_mode==1",
+                "group": "gg_output_voltage_control"
+            },
             {
                 "id": "baud_rate",
                 "title": "Baud Rate",
@@ -68,6 +120,37 @@
         ],
         "channels": [
             {
+                "id": "battery_status",
+                "name": "Battery Status",
+                "read_only": true,
+                "reg_type": "input",
+                "address": 32,
+                "enum": [0, 1, 2],
+                "enum_titles": [
+                    "Charging",
+                    "Fully Charged",
+                    "Discharging"
+                ],
+                "group": "gg_ups_channels"
+            },
+            {
+                "id": "temperature_status",
+                "name": "Temperature Status",
+                "read_only": true,
+                "reg_type": "input",
+                "address": 32,
+                "enum": [0, 1, 2, 3, 4],
+                "enum_titles": [
+                    "Normal",
+                    "Cold, Not Working",
+                    "Cold, Only Discharge",
+                    "Overheat, Only Discharge",
+                    "Overheat, Not Working"
+                ],
+                "group": "gg_ups_channels"
+            },
+
+            {
                 "id": "input_voltage",
                 "name": "Input Voltage",
                 "units": "V",
@@ -75,7 +158,7 @@
                 "round_to": 0.01,
                 "reg_type": "input",
                 "address": 0,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
             },
             {
                 "id": "output_voltage",
@@ -85,48 +168,48 @@
                 "round_to": 0.01,
                 "reg_type": "input",
                 "address": 1,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
             },
             {
                 "id": "battery_voltage",
                 "name": "Battery Voltage",
                 "units": "V",
                 "scale": 0.001,
-                "round_to": 0.01,
+                "round_to": 0.001,
                 "reg_type": "input",
                 "address": 2,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
             },
             {
                 "id": "battery_current",
                 "name": "Battery Current",
                 "units": "A",
                 "scale": 0.001,
-                "round_to": 0.01,
+                "round_to": 0.001,
                 "format": "s16",
                 "reg_type": "input",
                 "address": 3,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
             },
             {
                 "id": "input_current_for_charging",
                 "name": "Input Current for Charging",
                 "units": "A",
                 "scale": 0.001,
-                "round_to": 0.01,
+                "round_to": 0.001,
                 "reg_type": "input",
                 "address": 4,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
             },
             {
                 "id": "load_current_when_powered_from_battery",
                 "name": "Load Current when Powered from Battery",
                 "units": "A",
                 "scale": 0.001,
-                "round_to": 0.01,
+                "round_to": 0.001,
                 "reg_type": "input",
                 "address": 5,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
             },
             {
                 "id": "battery_temperature",
@@ -135,7 +218,110 @@
                 "scale": 0.01,
                 "reg_type": "input",
                 "address": 6,
-                "group": "g_backup_power_supply"
+                "group": "gg_ups_channels"
+            },
+            {
+                "id": "battery_capacity",
+                "name": "Battery Capacity",
+                "units": "deg C",
+                "scale": 0.01,
+                "reg_type": "input",
+                "address": 6,
+                "group": "gg_ups_channels"
+            },
+
+            {
+                "id": "button_state",
+                "name": "Button State",
+                "reg_type": "discrete",
+                "address": 0,
+                "type": "switch",
+                "sporadic": true,
+                "enabled": false,
+                "group": "g_button"
+            },
+            {
+                "id": "button_single_press_counter",
+                "name": "Button Single Press Counter",
+                "reg_type": "press_counter",
+                "address": 464,
+                "type": "value",
+                "sporadic": true,
+                "enabled": false,
+                "group": "g_button"
+            },
+            {
+                "id": "button_long_press_counter",
+                "name": "Button Long Press Counter",
+                "reg_type": "press_counter",
+                "address": 480,
+                "type": "value",
+                "sporadic": true,
+                "enabled": false,
+                "group": "g_button"
+            },
+            {
+                "id": "button_double_press_counter",
+                "name": "Button Double Press Counter",
+                "reg_type": "press_counter",
+                "address": 496,
+                "type": "value",
+                "sporadic": true,
+                "enabled": false,
+                "group": "g_button"
+            },
+            {
+                "id": "button_shortlong_press_counter",
+                "name": "Button Shortlong Press Counter",
+                "reg_type": "press_counter",
+                "address": 512,
+                "type": "value",
+                "sporadic": true,
+                "enabled": false,
+                "group": "g_button"
+            },
+
+            {
+                "id": "charger_current_setpoint",
+                "name": "Charger Current Setpoint",
+                "units": "mA",
+                "reg_type": "input",
+                "address": 411,
+                "group": "debug"
+            },
+            {
+                "id": "discharger_voltage_setpoint",
+                "name": "Discharger Voltage Setpoint",
+                "units": "V",
+                "reg_type": "input",
+                "scale": 0.001,
+                "address": 411,
+                "group": "debug"
+            },
+            {
+                "id": "heater",
+                "name": "Heater",
+                "type": "switch",
+                "read_only": true,
+                "reg_type": "discrete",
+                "address": 0,
+                "group": "debug"
+            },
+            {
+                "id": "heater_force_control",
+                "name": "Heater Force Control",
+                "type": "switch",
+                "reg_type": "coil",
+                "address": 0,
+                "group": "debug"
+            },
+            {
+                "id": "heater_force_control_state",
+                "name": "Heater Force Control State",
+                "type": "switch",
+                "reg_type": "coil",
+                "address": 0,
+                "group": "debug"
             },
 
             {% set chips = ["charger", "discharger"] -%}
@@ -220,6 +406,7 @@
         "translations": {
             "en": {
                 "template_title": "{{ title_en }}",
+
                 "baud_rate_description": "Make sure that communication with device is established before changing this parameter. Select required baud rate, save configuration and then change port baud rate to the same value."
             },
             "ru": {
@@ -229,6 +416,38 @@
                 "Debug": "Диагностика",
                 "Baud Rate": "Скорость обмена",
                 "baud_rate_description": "Перед изменением параметра убедитесь, что связь с устройством установлена. Выберите нужную скорость обмена, сохраните конфигурацию, а затем укажите в настройках порта эту же скорость.",
+
+                "Output Voltage When Powered Up by Button (V)": "Выходное напряжение при включении кнопкой (В)",
+
+                "g_button_description": "Кнопка на модуле WB-UPS v.3 может использоваться для управления другими устройствами через правила.<br><br>При наличии внешнего питания кнопка не выполняет никаких действий на модуле WB-UPS v.3.<br>При отсутствии внешнего питания длинное нажатие отключает WB-UPS v.3.<br><br>Параметры нажатий фиксированы:<br>- время длинного нажатия: 2000 мс<br>- время ожидания второго нажатия: 300 мс<br><br>",
+                "g_output_voltage_control_description": "Выходное напряжение при включении кнопкой всегда 12 В.<br>В автоматическом режиме выходное напряжение автоматически подстраивается под входное.<br>В ручном режиме при понижении входного напряжения ниже заданного уровня включается резервное питание.",
+
+                "Uninterruptible Power Supply": "Резервное питание",
+                "Output Voltage Control": "Управление выходным напряжением",
+                "Mode": "Режим",
+                "Automatic": "Автоматический",
+                "Manual": "Ручной",
+                "Output Voltage (V)": "Выходное напряжение (В)",
+
+                "Battery Status": "Статус батареи",
+                "Temperature Status": "Статус температуры",
+                "Input Voltage": "Входное напряжение",
+                "Output Voltage": "Выходное напряжение",
+                "Battery Voltage": "Напряжение батареи",
+                "Battery Current": "Ток батареи",
+                "Input Current for Charging": "Входной ток для заряда",
+                "Load Current when Powered from Battery": "Ток нагрузки при питании от батареи",
+                "Battery Temperature": "Температура батареи",
+                "Battery Capacity": "Уровень заряда батареи",
+
+
+
+                "Button": "Кнопка",
+                "Button State": "Состояние кнопки",
+                "Button Single Press Counter": "Счетчик одиночных нажатий",
+                "Button Long Press Counter": "Счетчик длинных нажатий",
+                "Button Double Press Counter": "Счетчик двойных нажатий",
+                "Button Shortlong Press Counter": "Счетчик коротких, а затем длинных нажатий",
 
                 "Serial": "Серийный номер",
                 "FW Version": "Версия прошивки",
